--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.2",
+    "express": "^4.16.4",
     "javascript-state-machine": "^3.1.0",
+    "json-socket": "^0.3.0",
+    "socket.io": "^2.1.1",
     "underscore": "^1.9.1"
   }
 }
