--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.16.4",
     "javascript-state-machine": "^3.1.0",
     "json-socket": "^0.3.0",
+    "mongodb": "^3.1.10",
+    "node-cron": "^2.0.3",
     "socket.io": "^2.1.1",
     "underscore": "^1.9.1"
   }
